--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,6 +100,9 @@ all = [
     "pydantic-settings >=2.0.0",
     # Extra Pydantic data types
     "pydantic-extra-types >=2.0.0",
+    # For attestation
+    "cctrusted_base >= 0.5.0",
+    "cctrusted_vm >= 0.5.0",
 ]
 
 [tool.pdm]
